Some update on UI

--- a/MyDiary/app/src/main/res/layout/activity_login.xml
+++ b/MyDiary/app/src/main/res/layout/activity_login.xml
@@ -68,16 +68,17 @@
         android:layout_width="300dp"
         android:layout_height="70dp"
         android:layout_marginTop="24dp"
-        android:backgroundTint="#4287f5"
+        android:backgroundTint="#F96060"
+        android:gravity="center"
         android:text="Login"
+        android:textAlignment="center"
         android:textColor="#ffffff"
         android:textSize="26sp"
         android:textStyle="bold"
-        android:textAlignment="center"
-        app:layout_constraintTop_toBottomOf="@+id/password"
+        android:background="@drawable/standard_button_bg"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:gravity="center" />
+        app:layout_constraintTop_toBottomOf="@+id/password" />
 
     <Button
         android:id="@+id/signup"
@@ -85,8 +86,9 @@
         android:layout_height="70dp"
         android:layout_marginTop="24dp"
         android:backgroundTint="#ffffff"
+        android:background="@drawable/standard_button_bg"
         android:text="Signup"
-        android:textColor="#4287f5"
+        android:textColor="#F96060"
         android:textSize="26sp"
         android:textStyle="bold"
         android:textAlignment="center"
@@ -104,7 +106,7 @@
         android:layout_marginTop="25dp"
         android:text="Forgot Password"
         android:textStyle="normal"
-        android:textSize="26sp"
+        android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@+id/signup"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
