--- a/MyDiary/app/src/main/res/layout/toolbar_layout.xml
+++ b/MyDiary/app/src/main/res/layout/toolbar_layout.xml
@@ -10,4 +10,13 @@
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
     >
 
+    <ImageView
+        android:id="@+id/go_back"
+        android:paddingLeft="5dp"
+        android:layout_width="50dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center_vertical"
+        android:src="@drawable/ic_arrow_back_black_24dp"
+        />
+
 </androidx.appcompat.widget.Toolbar>
