--- a/MyDiary/app/src/main/res/layout/activity_diaryhome.xml
+++ b/MyDiary/app/src/main/res/layout/activity_diaryhome.xml
@@ -124,19 +124,19 @@
         android:id="@+id/main_fab_enter_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="36dp"
-        android:layout_marginLeft="30dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
         android:layout_marginStart="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginBottom="36dp"
         android:src="@drawable/add"
-        app:backgroundTint="#ee722f"
+        app:backgroundTint="#F96060"
         app:borderWidth="0dp"
         app:elevation="6dp"
         app:fabSize="normal"
         app:layout_anchorGravity="bottom|right"
         app:pressedTranslationZ="12dp"
-        app:rippleColor="#a6a6a6"/>
+        app:rippleColor="#a6a6a6" />
 
 </RelativeLayout>
