--- a/MyDiary/app/src/main/res/layout/part_common_title.xml
+++ b/MyDiary/app/src/main/res/layout/part_common_title.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/common_title_ll"
-              android:background="#161414"
+              android:background="#00000000"
               android:layout_width="match_parent"
               android:layout_height="45dp"
-              android:orientation="horizontal"
-    >
+              android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/common_iv_back"
         android:paddingLeft="5dp"
         android:layout_width="50dp"
-        android:layout_height="30dp"
+        android:layout_height="40dp"
         android:layout_gravity="center_vertical"
-        android:src="@drawable/ic_arrow_back_black_24dp"
+        android:src="@drawable/icon_arrow_arrow_left"
         />
 
     <TextView
@@ -24,7 +23,7 @@
         android:layout_weight="1"
         android:gravity="center"
         android:text="Add Diary"
-        android:textColor="#ffffff"
+        android:textColor="#000000"
         android:textSize="18sp"
         android:textStyle="bold" />
 
@@ -34,7 +33,6 @@
         android:layout_height="30dp"
 
         />
-
 
 
 </LinearLayout>
