Add the map view

--- a/MyDiary/app/src/main/res/values/colors.xml
+++ b/MyDiary/app/src/main/res/values/colors.xml
@@ -17,4 +17,7 @@
     <color name="pink_pressed">#ec407a</color>
     <color name="blue_semi_transparent">#805677fc</color>
     <color name="blue_semi_transparent_pressed">#80738ffe</color>
+    <color name="mapboxWhite">#ffffff</color>
+    <color name="mapboxBlue">#4264fb</color>
+    <color name="mapboxGrayLight">#c6d2e1</color>
 </resources>
